<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
    android:layout_gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/avatar"
        />

    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/automnfont"
        android:text="@string/name_belay_m_buta" />

    <TextView
        android:id="@+id/profileSportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:fontFamily="@font/goldenfont"
        android:text="@string/favorite_sport_foot_ball" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFA500"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/favoriteSportTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/artifica"
            android:text="@string/favorite_sport_basket_ball"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/fanClubTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/artifica"
            android:text="@string/fan_club_arsenal"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addAboutMeFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/aboutMe"
        android:src="@drawable/ic_add" />

</FrameLayout>
